# tapl-rust

./: Cargo.toml  README.md
src/: context.rs  main.rs  parser.lalrpop  term.rs  termtype.rs  type.rs
