[package]
name = "not-simply-typed"
version = "0.1.0"
authors = ["Luyu Cheng <chengluyu@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
rustyline = "8.2.0"
